--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mariadb": "^3.2.3",
+    "sequelize": "^6.35.2",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
